--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -70,7 +70,7 @@
         </widget>
         <widget class="QWidget" name="tab_5">
          <attribute name="title">
-          <string>Target Output</string>
+          <string>Program Console</string>
          </attribute>
          <layout class="QVBoxLayout" name="verticalLayout_6">
           <item>
@@ -414,7 +414,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Target Output</string>
+    <string>Program Console</string>
    </property>
   </action>
   <action name="actionViewGdbOutput">
