--- a/src/opendialog.ui
+++ b/src/opendialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>563</width>
-    <height>545</height>
+    <width>639</width>
+    <height>683</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -198,6 +198,51 @@
          </item>
          <item row="4" column="3">
           <widget class="QPushButton" name="pushButton_selectCoreFile">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QRadioButton" name="radioButton_runningProgram">
+         <property name="text">
+          <string>Connect to running process</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QGridLayout" name="gridLayout_5">
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_10">
+           <property name="text">
+            <string>Program</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="lineEdit_runningProg"/>
+         </item>
+         <item row="0" column="2">
+          <widget class="QPushButton" name="pushButton_runningProg">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_11">
+           <property name="text">
+            <string>Process PID</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="lineEdit_pid"/>
+         </item>
+         <item row="1" column="2">
+          <widget class="QPushButton" name="pushButton_runningPid">
            <property name="text">
             <string>...</string>
            </property>
