--- a/src/codeviewtab.ui
+++ b/src/codeviewtab.ui
@@ -17,11 +17,26 @@
    <property name="spacing">
     <number>1</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
     <widget class="QComboBox" name="comboBox_funcList">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="minimumSize">
       <size>
        <width>20</width>
@@ -41,7 +56,7 @@
         <x>0</x>
         <y>0</y>
         <width>769</width>
-        <height>493</height>
+        <height>500</height>
        </rect>
       </property>
      </widget>
