Improved the class and function ui

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -37,6 +37,18 @@
            <string>Files</string>
           </attribute>
           <layout class="QVBoxLayout" name="verticalLayout_7">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
            <item>
             <widget class="QTreeWidget" name="treeWidget_file">
              <column>
@@ -53,6 +65,18 @@
            <string>Classes</string>
           </attribute>
           <layout class="QVBoxLayout" name="verticalLayout_9">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
            <item>
             <widget class="QTreeWidget" name="treeWidget_classes">
              <property name="selectionMode">
@@ -85,6 +109,18 @@
            <string>Functions</string>
           </attribute>
           <layout class="QVBoxLayout" name="verticalLayout_8">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
            <item>
             <widget class="QTreeWidget" name="treeWidget_functions">
              <property name="selectionMode">
