--- a/src/settingsdialog.ui
+++ b/src/settingsdialog.ui
@@ -413,7 +413,7 @@ QGroupBox::title {
           <item row="7" column="0">
            <widget class="QLabel" name="label_13">
             <property name="text">
-             <string>Foreground</string>
+             <string>Foreground text</string>
             </property>
            </widget>
           </item>
