--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -90,6 +90,48 @@
             <number>0</number>
            </property>
            <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_classFilter">
+             <property name="leftMargin">
+              <number>3</number>
+             </property>
+             <item>
+              <widget class="QPushButton" name="pushButton_closeClassFilter">
+               <property name="maximumSize">
+                <size>
+                 <width>20</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>X</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="lineEdit_classFilter"/>
+             </item>
+             <item>
+              <widget class="QPushButton" name="pushButton_clearClassFilter">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>48</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Reset</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+           <item>
             <widget class="QTreeWidget" name="treeWidget_classes">
              <property name="selectionMode">
               <enum>QAbstractItemView::NoSelection</enum>
@@ -130,6 +172,61 @@
            <property name="bottomMargin">
             <number>0</number>
            </property>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_funcFilter">
+             <property name="leftMargin">
+              <number>5</number>
+             </property>
+             <item>
+              <widget class="QPushButton" name="pushButton_closeFuncFilter">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>20</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>X</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="lineEdit_funcFilter">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="pushButton_clearFuncFilter">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>48</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Reset</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
            <item>
             <widget class="QTreeWidget" name="treeWidget_functions">
              <property name="selectionMode">
@@ -506,6 +603,9 @@
     <addaction name="actionViewGdbOutput"/>
     <addaction name="actionViewFileBrowser"/>
     <addaction name="separator"/>
+    <addaction name="actionViewFunctionFilter"/>
+    <addaction name="actionViewClassFilter"/>
+    <addaction name="separator"/>
     <addaction name="actionDefaultViewSetup"/>
    </widget>
    <widget class="QMenu" name="menuSearch">
@@ -728,6 +828,22 @@
   <action name="actionGoToMain">
    <property name="text">
     <string>Go To main()</string>
+   </property>
+  </action>
+  <action name="actionViewFunctionFilter">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Function Filter</string>
+   </property>
+  </action>
+  <action name="actionViewClassFilter">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Class Filter</string>
    </property>
   </action>
  </widget>
