--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -340,7 +340,7 @@
        </widget>
        <widget class="QTabWidget" name="tabWidget_2">
         <property name="currentIndex">
-         <number>0</number>
+         <number>2</number>
         </property>
         <widget class="QWidget" name="tab_4">
          <attribute name="title">
@@ -437,15 +437,12 @@
          </attribute>
          <layout class="QVBoxLayout" name="verticalLayout_11">
           <item>
-           <widget class="QPlainTextEdit" name="gedeOutputWidget">
+           <widget class="QTextEdit" name="gedeOutputWidget">
             <property name="undoRedoEnabled">
              <bool>false</bool>
             </property>
             <property name="readOnly">
              <bool>true</bool>
-            </property>
-            <property name="backgroundVisible">
-             <bool>false</bool>
             </property>
            </widget>
           </item>
