--- a/src/opendialog.ui
+++ b/src/opendialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>638</width>
-    <height>582</height>
+    <width>567</width>
+    <height>757</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -197,6 +197,75 @@
         </layout>
        </item>
        <item>
+        <widget class="QRadioButton" name="radioButton_gdbServerSerial">
+         <property name="text">
+          <string>Connect to GDB server through serial port</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QGridLayout" name="gridLayout_6">
+         <property name="leftMargin">
+          <number>11</number>
+         </property>
+         <property name="topMargin">
+          <number>11</number>
+         </property>
+         <property name="rightMargin">
+          <number>11</number>
+         </property>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_10">
+           <property name="text">
+            <string>Baud rate</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1" colspan="2">
+          <widget class="QComboBox" name="comboBox_baudRate">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="editable">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_8">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Serial port</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="3">
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="0" column="1" colspan="3">
+          <widget class="QComboBox" name="comboBox_serialPort"/>
+         </item>
+        </layout>
+       </item>
+       <item>
         <widget class="QRadioButton" name="radioButton_openCoreDump">
          <property name="text">
           <string>Open a core dump</string>
@@ -377,19 +446,28 @@
   </customwidget>
  </customwidgets>
  <tabstops>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>comboBox_projDir</tabstop>
+  <tabstop>comboBox_gdbCommand</tabstop>
+  <tabstop>lineEdit_program</tabstop>
+  <tabstop>pushButton_selectFile</tabstop>
   <tabstop>radioButton_localProgram</tabstop>
   <tabstop>lineEdit_arguments</tabstop>
   <tabstop>radioButton_gdbServerTcp</tabstop>
   <tabstop>lineEdit_tcpHost</tabstop>
   <tabstop>lineEdit_tcpPort</tabstop>
   <tabstop>checkBox_download</tabstop>
+  <tabstop>radioButton_gdbServerSerial</tabstop>
+  <tabstop>comboBox_serialPort</tabstop>
+  <tabstop>comboBox_baudRate</tabstop>
   <tabstop>radioButton_openCoreDump</tabstop>
   <tabstop>lineEdit_coreFile</tabstop>
   <tabstop>pushButton_selectCoreFile</tabstop>
+  <tabstop>radioButton_runningProgram</tabstop>
+  <tabstop>lineEdit_pid</tabstop>
+  <tabstop>pushButton_runningPid</tabstop>
   <tabstop>lineEdit_initialBreakpoint</tabstop>
   <tabstop>checkBox_reloadBreakpoints</tabstop>
-  <tabstop>buttonBox</tabstop>
-  <tabstop>tabWidget</tabstop>
   <tabstop>plainTextEdit_initCommands</tabstop>
  </tabstops>
  <resources/>
